force-app/main/default/objects/KYC__c/KYC__c.object-meta.xml
<CustomObject>
    <label>KYC</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{000}</displayFormat>
        <label>KYC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>