force-app/main/default/objects/KYC__c/fields/ApprovedBy_lk__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC</relationshipName>
    <type>Lookup</type>
</CustomField>