force-app/main/default/objects/KYC__c/fields/RejectedBy__c.field-meta.xml
<CustomField>
    <fullName>RejectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC1</relationshipName>
    <type>Lookup</type>
</CustomField>