force-app/main/default/objects/KYC__c/fields/RejectedDate__c.field-meta.xml
<CustomField>
    <fullName>RejectedDate__c</fullName>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>