force-app/main/default/objects/KYC__c/fields/RequestComment__c.field-meta.xml
<CustomField>
    <fullName>RequestComment__c</fullName>
    <label>Request Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>